--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -9,5 +9,22 @@
     <%- include('../partials/_navbar.ejs') %>
     <a href='/users/<%= user._id %>/foods/new'>Add new food</a>
     <h1>Welcome to my Pantry</h1>
+    <% if(pantry) { %>
+      <ul>
+        <% pantry.forEach((item)=>{ %>
+          <li>
+            <span> <%= item.name %> </span>
+            <form action="/users/<%= user._id %>/foods/<%= item._id %>?_method=DELETE" method="POST">
+              <!-- Hidden field to simulate DELETE method -->
+              <input type="hidden" name="_method" value="DELETE">
+              <button type="submit">Delete</button>
+            </form>
+
+         </li> 
+       <% }) %>
+      </ul>
+    <% } else { %>
+      <p>There are no items in this pantry</p>
+    <% } %>
   </body>
 </html>
