--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -22,6 +22,13 @@
           <input type="hidden" name="_method" value="DELETE" />
           <button type="submit">Delete</button>
         </form>
+
+        
+        <form action="/users/<%= user._id %>/foods/<%= item._id %>/edit" method="GET">
+          <button type="submit">Edit</button>
+        </form>
+
+        
       </li>
       <% }) %>
     </ul>
