--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -23,7 +23,7 @@
           <button type="submit">Delete</button>
         </form>
 
-        
+        <!-- Hidden field to simulate PUT method -->
         <form action="/users/<%= user._id %>/foods/<%= item._id %>/edit" method="GET">
           <button type="submit">Edit</button>
         </form>
